--- a/src/views/_page.scss
+++ b/src/views/_page.scss
@@ -126,10 +126,6 @@
         }
     }
     &__post{
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        
         &-title{
             font-family: 'Chloe-Regular';
             background-color: white;
@@ -183,14 +179,15 @@
         }
     }
     &__redirector{
-        display: flex;
-        flex-direction: row;
         text-decoration: none;
         margin: 0 0 2rem 0;
     }
     &__type{
         &-post{
+            display: flex;
+            flex-direction: row;
             width: 100%;
+
             & .page__redirector-info{
                 display: flex;
                 flex-direction: column;
@@ -202,6 +199,8 @@
             }
         }
         &-product{
+            display: flex;
+            flex-direction: row;
             width: 100%;
 
             & .--title-info{
@@ -217,13 +216,28 @@
             }
         }
         &-podcast{
+            display: flex;
+            flex-direction: row;
             width: 100%;
+
             & .page__redirector-banner{
                 display: flex;
                 background-size: 8rem 5rem;
                 margin: 0 0 0 auto;
                 width: 20rem;
                 height: 5rem;
+            }
+        }
+        &-course{
+            align-self: center;
+            & .page__redirector-banner{
+                width: 100%;
+            }
+            & .page__redirector-info{
+                display: flex;
+                flex-direction: column;
+                text-align: center;
+                margin: 3rem 1rem 3rem 1rem;
             }
         }
     }
@@ -371,15 +385,15 @@
         }
         &__redirector{
             margin: 0 0 4vh 0;
+            &:hover{
+                box-shadow: 1.5vh 1.5vh 2.5vh #d9d9d9, 
+                            -1.5vh -1.5vh 3.5vh #ffff;
+                transition: box-shadow .3s ease-in-out;
+                -moz-transition: box-shadow .3s ease-in-out;
+            }
         }
         &__type{
             &-post{
-                &:hover{
-                    box-shadow: 1.5vh 1.5vh 2.5vh #d9d9d9, 
-                                -1.5vh -1.5vh 3.5vh #ffff;
-                    transition: box-shadow .3s ease-in-out;
-                    -moz-transition: box-shadow .3s ease-in-out;
-                }
                 &:hover .--title-info{
                     border-color: #73A8A0;
                 }
@@ -396,13 +410,6 @@
             }
             &-product{
                 width: 80%;
-
-                &:hover{
-                    box-shadow: 1.5vh 1.5vh 2.5vh #d9d9d9, 
-                                -1.5vh -1.5vh 3.5vh #ffff;
-                    transition: box-shadow .3s ease-in-out;
-                    -moz-transition: box-shadow .3s ease-in-out;
-                }
                 &:hover .--title-info{
                     border-color: #73A8A0;
                 }
@@ -418,12 +425,6 @@
                 }
             }
             &-podcast{ 
-                &:hover{
-                    box-shadow: 1.5vh 1.5vh 2.5vh #d9d9d9, 
-                                -1.5vh -1.5vh 3.5vh #ffff;
-                    transition: all .3s ease-in-out;
-                    -moz-transition: box-shadow .3s ease-in-out;
-                }
                 &:hover .page__redirector-banner{
                     opacity: 0.8;
                 }
@@ -444,6 +445,16 @@
                     margin: 0 0 0 auto;
                     width: 30vh;
                     height: 20vh;
+                }
+            }
+            &-course{
+                overflow: hidden;
+                &:hover .page__redirector-banner{
+                    transition: transform ease-in-out .2s;
+                    transform: scale(1.04);
+                }
+                & .page__redirector-info{
+                    margin: 5vh 2vh 5vh 2vh;
                 }
             }
         }
