--- a/src/views/_page.scss
+++ b/src/views/_page.scss
@@ -29,7 +29,6 @@
             margin: 0 .5rem 0 0;
         }
         &-content{
-            background: linear-gradient(0deg, rgba(0,0,0,0.65) 60%, rgba(255,255,255,0) 100%);
             color: inherit;
         }
         &-title{
@@ -52,6 +51,7 @@
     &__cluster{
         display: grid;
         grid-template-rows: auto;
+        width: 100%;
     }
     &__node{
         background-repeat: no-repeat;
@@ -275,7 +275,6 @@
             }
             &:hover .page__banner-content{
                 transition: all ease-in-out 100ms;
-                background: linear-gradient(0deg, rgba(0,0,0,0.65) 70%, rgba(255,255,255,0) 100%);
             }
             &:hover .page__banner-title{
                 text-decoration: underline;
