Minor quality of life Button update

--- a/src/views/_mods.scss
+++ b/src/views/_mods.scss
@@ -336,9 +336,13 @@
         margin: 2.3vh 0 0 0;
     }
     .--root-post{
-        padding: 2vh 4vh 1.5vh 4vh;
-        margin: 5vh 0 0 0;
-        width: 25%;
+        padding: 2vh 0 2vh 0;
+        margin: 7vh 0 0 0;
+        width: auto;
+
+        & p{
+            margin: 0 4.5vh 0 4.5vh;
+        }
     }
     .--top-thin-borders{
         border-top: .1vh solid #c4c4c4;
