Updated styling following up Carousel update

--- a/src/views/_mods.scss
+++ b/src/views/_mods.scss
@@ -265,6 +265,9 @@
 .--underlined{
     text-decoration: underline;
 }
+.--disabled-controller{
+    opacity: 0.5;
+}
 @-webkit-keyframes pulse {
     0% {
         -webkit-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
@@ -517,6 +520,18 @@
             background: linear-gradient(0deg, rgba(0,0,0,0.70) 60%, rgba(255,255,255,0) 100%);
         }
     }
+    .--active-controller{
+        &:hover{
+            opacity: 0.8;
+        }
+        &:hover svg{
+            -webkit-animation: scaling .6s infinite;
+            -moz-animation: scaling .6s infinite;
+            -o-animation: scaling .6s infinite;
+            animation: scaling .6s infinite;
+            transition: all ease-in .1s;
+        }
+    }
     @-webkit-keyframes pulse {
         0% {
             -webkit-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
@@ -571,6 +586,46 @@
         }    
         100% {
             box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+        }
+    }
+    @-webkit-keyframes scaling {
+        0% {
+            transform: translateX(0);
+        }     
+        100% {
+            transform: translateX(.5vh);
+        }
+    }
+    @-moz-keyframes scaling {
+        0% {
+            transform: translateX(0);
+        }     
+        100% {
+            transform: translateX(.5vh);
+        }
+    }
+    @-ms-keyframes scaling {
+        0% {
+            transform: translateX(0);
+        }     
+        100% {
+            transform: translateX(.5vh);
+        }
+    }
+    @-o-keyframes scaling {
+        0% {
+            transform: translateX(0);
+        }     
+        100% {
+            transform: translateX(.5vh);
+        }
+    }
+    @keyframes scaling {
+        0% {
+            transform: translateX(0);
+        }     
+        100% {
+            transform: translateX(.5vh);
         }
     }
 }
