--- a/src/views/_mods.scss
+++ b/src/views/_mods.scss
@@ -25,6 +25,12 @@
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(auto, 1fr));
 }
+.--table-four{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 2rem;
+    column-gap: 1rem;
+}
 .--root-banner{
     display: none;
 }
@@ -332,6 +338,11 @@
     .--table{
         grid-template-columns: repeat(auto-fill,minmax(20%,1fr));
         column-gap: 3vh;
+    }
+    .--table-four{
+        grid-template-columns: repeat(auto-fill,minmax(20%,1fr));
+        column-gap: 3vh;
+        row-gap: 0;
     }
     .--root-banner{
         display: block;
