Minor Like Button logic update

--- a/src/components/LikeButton/__like-button.scss
+++ b/src/components/LikeButton/__like-button.scss
@@ -21,6 +21,12 @@
         &:hover{
             cursor: pointer;
         }
+        &:active path{
+            fill: #ff0000;
+        }
+        &:hover path:nth-child(1){
+            fill: #ff0000;
+        }
         & svg{
             width: 2.3vh;
             height: 2.2vh;
