--- a/src/components/LikeButton/__like-button.scss
+++ b/src/components/LikeButton/__like-button.scss
@@ -1,16 +1,15 @@
 .like-button{
     display: flex;
-    flex-direction: column;
     border-radius: 50%;
     background-color: #FFFFFF;
     opacity: 0.70;
+    align-items: center;
+    justify-content: center;
     width: 2.2rem;
     height: 2.2rem;
     & svg{
-        width: 1.2rem;
-        height: 1.2rem;
-        align-self: center;
-        margin: auto 0 auto 0;
+            width: 100%;
+            height: 1.2rem;
     }
 }
 @media (min-width: 801px){
@@ -26,11 +25,6 @@
         }
         &:hover path:nth-child(1){
             fill: #ff0000;
-        }
-        & svg{
-            width: 2.3vh;
-            height: 2.2vh;
-            margin: auto 0 auto 0;
         }
     }
 }
