--- a/src/components/Card/_card.scss
+++ b/src/components/Card/_card.scss
@@ -1,51 +1,51 @@
-.product-card{
-    &__banner{
+.card__product{
+    &-banner{
         display: flex;
         flex-direction: column;
         background-position: center;
         background-repeat: no-repeat;
         background-size: 100% 15rem;
         height: 15rem;
-        & .like-button{
+        & .button_like{
            align-self: flex-end;
            margin: .5em .5rem 0 0;
         }
     }
-    &__title{
+    &-title{
         font-family: 'ProximaNova-SemiBold';
         font-size: .8rem;
         margin: .5rem 0 .5rem 0;
         height: 16px;
         overflow: hidden;
     }
-    &__description{
+    &-description{
         font-family: 'ProximaNova-Regular';
         font-size: .7rem;
         margin: 0 0 1rem 0;
     }
-    &__price{
+    &-price{
         font-family: 'ProximaNova-Thin';
         font-size: 1.1rem;
     }
 }
 @media (min-width: 801px){
-    .product-card{
-        &__banner{
+    .card__product{
+        &-banner{
             background-size: 100% 40vh;
             height: 40vh;
-            & .like-button{
+            & .button_like{
                 margin: 1vh 1vh 0 0;
             }
         }
-        &__title{
+        &-title{
             font-size: 2vh;
             margin: 2.5vh 0 1vh 0;
         }
-        &__description{
+        &-description{
             font-size: 1.7vh;
             margin: 0 0 3vh 0;
         }
-        &__price{
+        &-price{
             font-size: 2.2vh;
         }
     }
