--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -9,6 +9,7 @@
 @import 'components/carousel';
 @import 'components/newsletter';
 @import 'components/cards';
+@import 'components/footer';
 
 //Pages Import
 @import 'views/page';
