--- a/src/assets/sass/components/_footer.scss
+++ b/src/assets/sass/components/_footer.scss
@@ -1,39 +1,167 @@
 .footer{
-    background-color: #000000;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    background-color: #000000;
     width: 100%;
     min-height: 30rem;
 
     &__content{
         display: grid;
-        align-items: center;
-        justify-items: center;
-        width: 90%;
+        grid-template-columns: repeat(minmax(auto, 1fr),3);
+        grid-template-areas: 
+        "newsletter"
+        "social"
+        "info"
+        "support"
+        "security"
+        "extra";
+        gap: 2rem 0;
+        width: 93%;
     }
     & svg{
         display: inline-block;
         width: 10rem;
     }
+    & :nth-child(1){
+        grid-area: newsletter;
+    }
+    & :nth-child(2){
+        grid-area: social;
+    }
+    & :nth-child(3){
+        grid-area: info;
+    }
+    & :nth-child(4){
+        grid-area: support;
+    }
+    & :nth-child(5){
+        grid-area: security;
+    }
     &__divisor{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 0 0 1rem 0;
         border-bottom: .1rem solid #ffffff;
+        gap: 2rem 0;
+
+        &-logo{
+            width: 100%;
+            height: 100%;
+        }
+        &-social{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 0 2rem;
+
+            & a{
+                width: 1.6rem;
+                height: 1.6rem;
+            }
+            & svg{
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+    &__info{
+        display: flex;
+        flex-direction: row;
         width: 100%;
+        text-align: start;
+        & :nth-child(2){
+            margin: 0 auto 0 auto;
+        }
+        & strong{
+            font-family: 'ProximaNova-SemiBold';
+            font-size: .8rem;
+            margin: 0 0 .4rem 0;
+        }
+        & span{
+            font-family: 'ProximaNova-thin';
+            margin: .4rem 0 0 0;
+            font-size: .8rem;
+        }
+        & div{
+            display: flex;
+            flex-direction: column;
+            & :nth-child(2){
+                margin: 0;
+            }
+        }
     }
 }
 @media (min-width: 801px){
     .footer{
         min-height: 25vh;
         &__content{
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-areas: 
+            "social info newsletter"
+            "extra support security";
+            gap: 0 10vh;
+            padding: 0 0 3vh 0;
+            border-bottom: .1vh solid #ffffff;
         }
         &__divisor{
-            width: auto;
+            flex-direction: row;
+            padding: 0;
             border-bottom: none;
+
+            &-logo{
+                &:hover{
+                    & path{
+                        fill: #73A8A0;
+                    }
+                }
+            }
+            &-social{
+                flex-direction: row;
+                margin: 0 0 0 auto;
+                gap: 0 4vh;
+
+                & a{
+                    width: 2.2vh;
+                    height: 2.2vh;
+                }
+                & :nth-child(1){
+                    &:hover svg{
+                        & path{
+                            fill:#B12FA5;
+                        }
+                    }
+                }
+                & :nth-child(2){
+                    &:hover svg{
+                        & path{
+                            fill: #3085F3;
+                        }
+                    }
+                }
+                & :nth-child(3){
+                    &:hover svg{
+                        & path{
+                            fill:#1DA1F2;
+                        }
+                    }
+                }
+            }
         }
-        & svg{
-            width: 20vh;
+        &__info{
+            align-items: center;
+            justify-content: center;
+            & strong{
+                font-size: 1.6vh;
+                margin: 0 0 1.3vh 0;
+            }
+            & span{
+                font-size: 1.6vh;
+                margin: .8vh 0 0 0;
+            }
         }
     }
 }
