--- a/src/assets/sass/components/_newsletter.scss
+++ b/src/assets/sass/components/_newsletter.scss
@@ -1,9 +1,41 @@
+.--light-theme{
+    flex-direction: column;
+}
+.--dark-theme{
+    width: 100%;
+    flex-direction: column;
+    align-self: center;
+    & .newsletter__title{
+        display: none;
+    }
+    & .newsletter__description{
+        font-family: 'ProximaNova-SemiBold';
+    }
+    & .newsletter__form{
+        flex-direction: column;
+        width: 100%;
+        &-email{
+            text-align: center;
+            padding: 0;
+            height: 2.5rem;
+            margin: 1rem 0 0 0;
+        }
+        &-button{
+            width: 35%;
+            height: 2.7rem;
+            margin: 1.3rem 0 0 0;
+        }
+    }
+    & .newsletter__info{
+        display: none;
+    }
+}
 .newsletter{
     display: flex;
-    flex-direction: column;
     text-align: center;
     align-items: center;
     justify-content: center;
+    align-self: flex-end;
 
     &__title{
         font-family: 'Chloe-Regular';
@@ -54,6 +86,41 @@
     }
 }
 @media (min-width: 801px){
+    .--dark-theme{
+        & .newsletter{
+            &__description{
+                align-self: flex-start;
+                font-size: 1.7vh;
+                margin: 0;
+            }
+            &__form{
+                margin: 2vh 0 0 0;
+                flex-direction: row;
+                width: 100%;
+                &-email{
+                    text-align: start;
+                    font-size: 1.5vh;
+                    padding: 0 0 0 1vh;
+                    height: 4vh;
+                    margin: 0;
+                    border: none;
+                }
+                &-button{
+                    width: 35%;
+                    height: 4vh;
+                    margin: 0 0 0 2vh;
+                    border: .1vh solid #ffffff;
+                    &:hover{
+                        background-color: #ffffff;
+                        color: #000000;
+                    }
+                }
+            }
+            &__info{
+                display: none;
+            }
+        }
+    }
     .newsletter{
         &__title{
             font-size: 5vh;
