--- a/src/assets/sass/components/_footer.scss
+++ b/src/assets/sass/components/_footer.scss
@@ -5,7 +5,6 @@
     justify-content: center;
     background-color: #000000;
     width: 100%;
-    min-height: 30rem;
 
     &__content{
         display: grid;
@@ -14,8 +13,8 @@
         "newsletter"
         "social"
         "info"
-        "support"
-        "security"
+        "extra"
+        "extra"
         "extra";
         gap: 2rem 0;
         width: 93%;
@@ -24,20 +23,14 @@
         display: inline-block;
         width: 10rem;
     }
-    & :nth-child(1){
+    & div:nth-child(1){
         grid-area: newsletter;
     }
-    & :nth-child(2){
+    & div:nth-child(2){
         grid-area: social;
     }
-    & :nth-child(3){
+    & div:nth-child(3){
         grid-area: info;
-    }
-    & :nth-child(4){
-        grid-area: support;
-    }
-    & :nth-child(5){
-        grid-area: security;
     }
     &__divisor{
         display: flex;
@@ -47,10 +40,16 @@
         padding: 0 0 1rem 0;
         border-bottom: .1rem solid #ffffff;
         gap: 2rem 0;
+        color: #ffffff;
 
         &-logo{
-            width: 100%;
-            height: 100%;
+            width: 25vh;
+            height: auto;
+            
+            & svg{
+                width: 100%;
+                height: 100%;
+            }
         }
         &-social{
             display: flex;
@@ -73,7 +72,8 @@
         flex-direction: row;
         width: 100%;
         text-align: start;
-        & :nth-child(2){
+
+        & div:nth-child(2){
             margin: 0 auto 0 auto;
         }
         & strong{
@@ -82,15 +82,79 @@
             margin: 0 0 .4rem 0;
         }
         & span{
-            font-family: 'ProximaNova-thin';
+            font-family: 'ProximaNova-Thin';
             margin: .4rem 0 0 0;
             font-size: .8rem;
         }
         & div{
             display: flex;
             flex-direction: column;
-            & :nth-child(2){
-                margin: 0;
+        }
+    }
+    &__under{
+        grid-area: extra;
+        font-family: 'ProximaNova-Thin';
+        display: grid;
+        align-items: center;
+        grid-template-areas: 
+        "page-support"
+        "page-info"
+        "page-extra";
+
+        & div:nth-child(1){
+            grid-area: page-extra;
+            border: none;
+        }
+        & div:nth-child(2){
+            grid-area: page-support;
+        }
+        & div:nth-child(3){
+            grid-area: page-info;
+        }
+        &-divisor{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            border-bottom: .1rem solid #ffffff;
+            margin: 0 0 2rem 0;
+            font-size: .8rem;
+            height: 100%;
+
+            &-support{
+                display: flex;
+                flex-direction: row;
+                margin: 0 0 0 .45rem;
+                gap: 0 3.3vw;
+                & svg{
+                    width: 1.5rem;
+                    height: 1.5rem;
+                }
+            }
+            &-info{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 1rem 0;
+                font-size: .8rem;
+
+                & div{
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+
+                    & svg{
+                        margin: 0 .5vh 0 0;
+                    }
+                }
+                & svg{
+                    width: 3vh;
+                    height: 3vh;
+                } 
+            }
+            &-extra{
+                text-align: center;
+                margin: auto 0 0 0;
             }
         }
     }
@@ -98,19 +162,24 @@
 @media (min-width: 801px){
     .footer{
         min-height: 25vh;
+        & div:nth-child(5){
+            grid-area: extra;
+        }
         &__content{
             grid-template-columns: 1fr 1fr 1fr;
             grid-template-areas: 
             "social info newsletter"
-            "extra support security";
+            "divisor divisor divisor"
+            "extra extra extra";
             gap: 0 10vh;
-            padding: 0 0 3vh 0;
-            border-bottom: .1vh solid #ffffff;
+            padding: 0;
+            border-bottom: none;
         }
         &__divisor{
             flex-direction: row;
-            padding: 0;
+            padding: 0 0 2.5vh 0;
             border-bottom: none;
+            margin: 4vh 0 0 0;
 
             &-logo{
                 &:hover{
@@ -151,9 +220,17 @@
                 }
             }
         }
+        &__line{
+            grid-area: divisor;
+            width: 100%;
+            border-top: .1vh solid #ffffff;
+            margin: 1vh 0 3vh 0;
+        }
         &__info{
             align-items: center;
             justify-content: center;
+            gap: 0;
+
             & strong{
                 font-size: 1.6vh;
                 margin: 0 0 1.3vh 0;
@@ -161,6 +238,45 @@
             & span{
                 font-size: 1.6vh;
                 margin: .8vh 0 0 0;
+            }
+        }
+        &__under{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            font-size: 1.6vh;
+            gap: 0 6vw;
+            margin: 0 0 3vh 0;
+
+            &-divisor{
+                border: none; 
+                margin: 0;
+
+                &-support{
+                    margin: 0 0 0 1.5vh;
+                    gap: 0 3vh;
+                    & svg{
+                        width: 3vh;
+                        height: 3vh;
+                    }
+                }
+                &-info{
+                    flex-direction: row;
+                    gap: 0 2vh;
+
+                    & div{
+                        & svg{
+                            margin: 0 .5vh 0 0;
+                        }
+                    }
+                    & svg{
+                        width: 3vh;
+                        height: 3vh;
+                    } 
+                }
+                &-extra{
+                    margin: 0;
+                }
             }
         }
     }
