--- a/src/assets/sass/components/_buttons.scss
+++ b/src/assets/sass/components/_buttons.scss
@@ -1,4 +1,4 @@
-.button_like{
+.button__like{
     display: flex;
     border-radius: 50%;
     background-color: #FFFFFF;
@@ -8,15 +8,17 @@
     width: 2.2rem;
     height: 2.2rem;
     & svg{
-            width: 100%;
-            height: 1.2rem;
+        width: 100%;
+        height: 1.2rem;
     }
 }
 @media (min-width: 801px){
-    .button_like{
+    .button__like{
         width: 4vh;
         height: 4vh;
-
+        & svg{
+            height: 2.4vh;
+        }
         &:hover{
             cursor: pointer;
         }
