--- a/src/assets/sass/components/_cards.scss
+++ b/src/assets/sass/components/_cards.scss
@@ -6,7 +6,7 @@
         background-repeat: no-repeat;
         background-size: 100% 15rem;
         height: 15rem;
-        & .button_like{
+        & .button__like{
            align-self: flex-end;
            margin: .5em .5rem 0 0;
         }
@@ -33,7 +33,7 @@
         &-banner{
             background-size: 100% 40vh;
             height: 40vh;
-            & .button_like{
+            & .button__like{
                 margin: 1vh 1vh 0 0;
             }
         }
