--- a/src/assets/sass/components/_newsletter.scss
+++ b/src/assets/sass/components/_newsletter.scss
@@ -144,6 +144,7 @@
                 margin: 3vh 0 0 0;
                 width: 60%;
                 height: 6vh;
+                font-size: 1.5vh;
 
                 &:hover{
                     cursor: pointer;
