--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -10,6 +10,7 @@
 @import 'components/newsletter';
 @import 'components/cards';
 @import 'components/footer';
+@import 'components/form';
 
 //Pages Import
 @import 'views/page';
