--- a/src/assets/sass/layout/_mods.scss
+++ b/src/assets/sass/layout/_mods.scss
@@ -272,6 +272,12 @@
 .--disabled-controller{
     opacity: 0.5;
 }
+.--shaking-text{
+    -webkit-animation: shake .2s 2;
+    -moz-animation: shake .2s 2;
+    -o-animation: shake .2s 2;
+    animation: shake .2s 2;
+}
 @-webkit-keyframes pulse {
     0% {
         -webkit-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
@@ -326,6 +332,76 @@
     }    
     100% {
         box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+    }
+}
+@-webkit-keyframes shake {
+    0% {
+        padding: 0;
+    }
+    25% {
+        padding: 0 0 0 1rem;
+    }
+    50% {
+        padding: 0 1rem 0 0;
+    }    
+    100% {
+        padding: 0;
+    }
+}
+@-moz-keyframes shake {
+    0% {
+        padding: 0;
+    }
+    25% {
+        padding: 0 0 0 1rem;
+    }
+    50% {
+        padding: 0 1rem 0 0;
+    }    
+    100% {
+        padding: 0;
+    }
+}
+@-ms-keyframes shake {
+    0% {
+        padding: 0;
+    }
+    25% {
+        padding: 0 0 0 1rem;
+    }
+    50% {
+        padding: 0 1rem 0 0;
+    }    
+    100% {
+        padding: 0;
+    }
+}
+@-o-keyframes shake {
+    0% {
+        padding: 0;
+    }
+    25% {
+        padding: 0 0 0 1rem;
+    }
+    50% {
+        padding: 0 1rem 0 0;
+    }    
+    100% {
+        padding: 0;
+    }
+}
+@keyframes shake {
+    0% {
+        padding: 0;
+    }
+    25% {
+        padding: 0 0 0 1rem;
+    }
+    50% {
+        padding: 0 1rem 0 0;
+    }    
+    100% {
+        padding: 0;
     }
 }
 @media (min-width: 801px){
@@ -597,6 +673,7 @@
             box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
         }
     }
+
     @-webkit-keyframes scaling {
         0% {
             transform: translateX(0);
@@ -635,6 +712,77 @@
         }     
         100% {
             transform: translateX(.5vh);
+        }
+    }
+
+    @-webkit-keyframes shake {
+        0% {
+            padding: 0;
+        }
+        25% {
+            padding: 0 0 0 2vh;
+        }
+        50% {
+            padding: 0 2vh 0 0;
+        }    
+        100% {
+            padding: 0 ;
+        }
+    }
+    @-moz-keyframes shake {
+        0% {
+            padding: 0;
+        }
+        25% {
+            padding: 0 0 0 2vh;
+        }
+        50% {
+            padding: 0 2vh 0 0;
+        }    
+        100% {
+            padding: 0 ;
+        }
+    }
+    @-ms-keyframes shake {
+        0% {
+            padding: 0;
+        }
+        25% {
+            padding: 0 0 0 2vh;
+        }
+        50% {
+            padding: 0 2vh 0 0;
+        }    
+        100% {
+            padding: 0 ;
+        }
+    }
+    @-o-keyframes shake {
+        0% {
+            padding: 0;
+        }
+        25% {
+            padding: 0 0 0 2vh;
+        }
+        50% {
+            padding: 0 2vh 0 0;
+        }    
+        100% {
+            padding: 0 ;
+        }
+    }
+    @keyframes shake {
+        0% {
+            padding: 0;
+        }
+        25% {
+            padding: 0 0 0 2vh;
+        }
+        50% {
+            padding: 0 2vh 0 0;
+        }    
+        100% {
+            padding: 0 ;
         }
     }
 }
