--- a/src/assets/sass/components/_form.scss
+++ b/src/assets/sass/components/_form.scss
@@ -5,52 +5,85 @@
     align-items: center;
     gap: 1rem 0;
     width: 100%;
-    height: 42rem;
-
+    height: 46rem;
 
     &__title{
         font-family: 'ProximaNova-Bold';
         font-size: 2.5rem;
         margin: 0 0 3rem 0;
     }
-    &__input-group:focus-within label{
-        transition: color ease-in-out .2s;
-        color: #73A8A0;
-    }
     &__label{
         font-family: 'ProximaNova-Regular';
-        font-size: 1.5rem;
+        position: absolute;
+        -webkit-transition: all ease-in-out .1s;
+        -moz-transition: all ease-in-out .1s;
+        -ms-transition: all ease-in-out .1s;
+        -o-transition: all ease-in-out .1s;
+        transition: all ease-in-out .1s;
+        pointer-events: none;
+        color: black;
+        opacity: 0.3;
+        font-size: 1rem;
+        left: 6.5%;
     }
     &__input-group{
         width: 100%;
+        &:nth-child(2) label{
+            top: 21.2rem;
+        }
+        &:nth-child(3) label{
+            top: 26.3rem;
+        }
+    }
+    &__input:focus + &__label,
+    &__input:not(:focus):valid + &__label{
+        font-size: .75rem;
+        margin: -1rem 0 0 0;
+        opacity: 1;
     }
     &__input{
         font-family: 'ProximaNova-Regular';
-        text-align: center;
+        -webkit-transition: all ease-in-out .2s;
+        -moz-transition: all ease-in-out .2s;
+        -ms-transition: all ease-in-out .2s;
+        -o-transition: all ease-in-out .2s;
+        transition: all ease-in-out .2s;
         font-size: 1rem;
         border: .1rem solid black;
-        height: 3rem;
-        padding: 0;
-        width: 100%;
-        margin: .5rem 0 .5rem 0;
+        height: 3.5rem;
+        padding: .5rem .5rem 0 .5rem;
+        width: 95%;
+        &:invalid{
+            box-shadow: none;
+            outline: none;
+            border-color: black;
+        }
         &:focus{
             box-shadow: none;
             outline: none;
-            transition: border-color ease-in-out .2s;
             border-color: #829491;
         }
     }
     &__submit{
         font-family: 'ProximaNova-SemiBold';
+        -webkit-transition: all ease-in-out .2s;
+        -moz-transition: all ease-in-out .2s;
+        -ms-transition: all ease-in-out .2s;
+        -o-transition: all ease-in-out .2s;
+        transition: all ease-in-out .2s;
         font-size: 1rem;
         padding: 0;
         background-color: transparent;
         border: .1rem solid black;
-        height: 3rem;
-        width: 95%;
+        height: 4rem;
+        width: 55%;
+        &:hover, &:active{
+            background-color: black;
+            color: white;
+        }
     }
     &__feedback{
-        margin: 2vh 0 0 0;
+        margin: 0;
         height: 2vh;
         font-family: 'ProximaNova-SemiBold';
         color: #a11521;
@@ -59,31 +92,43 @@
 }
 @media (min-width: 801px){
     .form{
-        gap: 1vh 0;
-        height: 66.2vh;
-        width: 60vh;
+        gap: 4vh 0;
+        height: 65.3vh;
+        width: 50%;
 
         &__title{
             font-size: 5vh;
             margin: 0 0 10vh 0;
         }
         &__label{
-            font-size: 3vh;
+            font-size: 2.4vh;
+            margin: 3vh 0 0 .8vh;
+            left: 33.9%;
+        }
+        &__input-group{
+            &:nth-child(2) label{
+                top: 27.8vh;
+            }
+            &:nth-child(3) label{
+                top: 40.2vh;
+            }
+        }
+        &__input:focus + &__label,
+        &__input:not(:focus):valid + &__label{
+            font-size: 1.8vh;
+            margin: 1vh 0 0 .8vh;
         }
         &__input{
             border: .1vh solid black;
-            font-size: 2vh;
-            height: 5vh;
-            margin: 2vh 0 1vh 0;
+            font-size: 2.5vh;
+            height: 7vh;
+            padding: 1.2vh 1vh 0 1vh;
         }
         &__submit{
             border: .1vh solid black;
-            height: 5vh;
+            height: 8vh;
             &:hover{
                 cursor: pointer;
-                background-color: black;
-                color: white;
-                transition: all .2s ease-in-out;
             }
         }
     }
