--- a/src/assets/sass/layout/_mods.scss
+++ b/src/assets/sass/layout/_mods.scss
@@ -617,6 +617,18 @@
             transition: all ease-in .1s;
         }
     }
+    .--hoverable{
+        background-color: #c4c4c4;
+        width: 0%;
+        -webkit-transition: all ease-in-out .2s;
+        -moz-transition: all ease-in-out .2s;
+        -ms-transition: all ease-in-out .2s;
+        -o-transition: all ease-in-out .2s;
+        transition: all ease-in-out .2s;
+        &:hover{
+            width: 100%;
+        }
+    }
     @-webkit-keyframes pulse {
         0% {
             -webkit-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
