Styling follow up

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -11,10 +11,12 @@
 @import 'components/cards';
 @import 'components/footer';
 @import 'components/form';
+@import 'components/loader';
 
 //Pages Import
 @import 'views/page';
 @import 'views/profile';
+
 //Themes Import
 @import 'themes/theme';
 
