--- a/src/assets/sass/layout/_mods.scss
+++ b/src/assets/sass/layout/_mods.scss
@@ -278,6 +278,13 @@
     -o-animation: shake .2s 2;
     animation: shake .2s 2;
 }
+.--invisible{
+    display: none;
+}
+.--loading{
+    filter: blur(1rem);
+    -webkit-filter: blur(1rem);
+}
 @-webkit-keyframes pulse {
     0% {
         -webkit-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
@@ -628,6 +635,10 @@
         &:hover{
             width: 100%;
         }
+    }
+    .--loading{
+        filter: blur(2vh);
+        -webkit-filter: blur(2vh);
     }
     @-webkit-keyframes pulse {
         0% {
