Minor form button resposiveness update

--- a/src/assets/sass/components/_form.scss
+++ b/src/assets/sass/components/_form.scss
@@ -124,6 +124,7 @@
             padding: 1.2vh 1vh 0 1vh;
         }
         &__submit{
+            font-size: 2vh;
             border: .1vh solid black;
             height: 8vh;
             &:hover{
