--- a/src/assets/sass/views/_page.scss
+++ b/src/assets/sass/views/_page.scss
@@ -220,7 +220,12 @@
             display: flex;
             flex-direction: row;
             width: 100%;
-
+            & .page__redirector-text{
+                margin: 1rem 0 0 0;
+                height: 1.1rem;
+                text-overflow: ellipsis;
+                overflow: hidden;
+            }
             & .page__redirector-banner{
                 display: flex;
                 background-size: 8rem 5rem;
@@ -441,6 +446,11 @@
                 &:hover .--title-info{
                     border-color: #73A8A0;
                 }
+                & .page__redirector-text{
+                    width: 85%;
+                    height: 2.6vh;
+                    margin: 1.2vh 0 0 0;
+                }
                 & .page__redirector-info{
                     display: flex;
                     flex-direction: column;
@@ -450,7 +460,7 @@
                     display: flex;
                     background-size: 30vh 20vh;
                     margin: 0 0 0 auto;
-                    width: 30vh;
+                    width: 37vh;
                     height: 20vh;
                 }
             }
