Sytling follow up

--- a/src/assets/sass/layout/_mods.scss
+++ b/src/assets/sass/layout/_mods.scss
@@ -529,6 +529,7 @@
     }
     .--post{
         & .page__banner-title{
+            width: 85%;
             margin: 0 2vh 0 2vh;
             font-size: 4vh;
         }
