--- a/src/assets/sass/views/_page.scss
+++ b/src/assets/sass/views/_page.scss
@@ -6,7 +6,7 @@
 
     &__place-holder{
         font-family: 'ProximaNova-Regular';
-        margin: 2rem 0 0 0;
+        margin: 2rem 0 2rem 0;
         font-size: 2.5rem;
     }
     &__banner{
@@ -272,7 +272,7 @@
 @media (min-width: 801px){
     .page{
         &__place-holder{
-            margin: 5vh 0 0 0;
+            margin: 5vh 0 5vh 0;
             font-size: 3vh;
         }
         &__node{
