--- a/src/assets/sass/components/_cards.scss
+++ b/src/assets/sass/components/_cards.scss
@@ -28,6 +28,74 @@
         font-size: 1.1rem;
     }
 }
+.card-course{
+    text-decoration: none;
+    color: black;
+    overflow: hidden;
+    min-height: 16.5rem;
+    box-shadow: .15rem .15rem .3rem #d9d9d9, 
+    -.15rem -.15rem .3rem #ffffff;
+
+    &__button{
+        align-self: flex-end;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        margin: 0 0 0 auto;
+        background-color: #73A8A0;
+        width: 1rem;
+        height: 1rem;
+        padding: .8rem; 
+    }
+    &__redirector-play{
+        width: 1rem;
+        height: 1rem;
+        margin: 0 0 0 .1rem;
+    }
+    &__banner{
+        width: 100%;
+        height: 10rem;
+        overflow: hidden;
+
+        & img{
+            width: 100%;
+            height: 100%;
+        }
+    }
+    &__description{
+        padding: 1rem;
+    }
+    &__header{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem 0;
+
+        & span{
+            font-family: 'ProximaNova-Regular';
+            color: #73A8A0;
+            font-size: .675rem;
+        }
+        & h4{
+            font-family: 'ProximaNova-Bold';
+            font-size: 1rem;
+            letter-spacing: .1rem;
+        }
+    }
+    &__footer{
+        font-family: 'ProximaNova-Thin';
+        font-size: .8rem;
+        margin: 1rem 0 1rem 0;
+        display: flex;
+        flex-direction: row;
+    }
+    &__redirector{
+        align-self: flex-end;
+        width: 1.15rem;
+        height: 1.15rem;
+        margin: 0 0 0 auto;
+    }
+}
 @media (min-width: 801px){
     .card__product{
         &-banner{
@@ -47,6 +115,61 @@
         }
         &-price{
             font-size: 2.2vh;
+        }
+    }
+    .card-course{
+        min-height: 33vh;
+        box-shadow: .2vh .2vh .6vh #d9d9d9, 
+        -.2vh -.2vh .6vh #ffffff;
+
+        &__button{
+            width: 2vh;
+            height: 2vh;
+            padding: 1vh; 
+        }
+        &__redirector-play{
+            width: 2vh;
+            height: 2vh;
+            margin: 0 0 0 .2vh;
+        }
+        &:hover &__redirector-play path{
+            fill: grey;
+        }
+        &:hover &__redirector path{
+            fill: #73A8A0;
+        }
+        &:hover &__banner img{
+            -webkit-transition: transform ease-in-out .2s;
+            -moz-transition: transform ease-in-out .2s;
+            -ms-transition: transform ease-in-out .2s;
+            -o-transition: transform ease-in-out .2s;
+            transition: transform ease-in-out .2s;
+            transform: scale(1.04);
+        }
+        &__banner{
+            height: 18vh;
+        }
+        &__description{
+            padding: 2vh;
+        }
+        &__header{
+            gap: 2vh 0;
+
+            & span{
+                font-size: 1.35vh;
+            }
+            & h4{
+                font-size: 2vh;
+                letter-spacing: .1vh;
+            }
+        }
+        &__footer{
+            font-size: 1.6vh;
+            margin: 2vh 0 1vh 0;
+        }
+        &__redirector{
+            width: 2.3vh;
+            height: 2.3vh;
         }
     }
 }
