--- a/src/assets/sass/layout/_mods.scss
+++ b/src/assets/sass/layout/_mods.scss
@@ -31,6 +31,9 @@
     row-gap: 2rem;
     column-gap: 1rem;
 }
+.--table-three-desktop{
+    width: 100%;
+}
 .--table-three-desktop > a:not(:first-child){
     display: none;
 }
@@ -429,13 +432,12 @@
         row-gap: 0;
     }
     .--table-three-desktop{
-        width: 100%;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 0 2vh;
     }
     .--table-three-desktop > a:not(:first-child){
-        display: block;
+        display: inline-block;
     }
     .--root-banner{
         display: block;
