Styling follow up update

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -12,6 +12,7 @@
 @import 'components/footer';
 @import 'components/form';
 @import 'components/loader';
+@import 'components/profile-posts';
 
 //Pages Import
 @import 'views/page';
