--- a/src/assets/sass/views/_page.scss
+++ b/src/assets/sass/views/_page.scss
@@ -127,7 +127,7 @@
             font-family: 'Chloe-Regular';
             background-color: white;
             font-size: 2.6rem;
-            margin: -1.5rem 0 3rem 0;
+            margin: 0 0 3rem 0;
             padding: 0 1vh 0 1vh;
         }
         &-info{
@@ -252,11 +252,6 @@
         width: 105%;
         height: 15rem;
         margin: -15rem 0 0 0;
-        
-        & .player{
-            align-self: flex-end;
-            margin: auto;
-        }
     }
 }
 
@@ -368,7 +363,7 @@
             }
             &-title{
                 font-size: 5vh;
-                margin: -3vh 0 5vh 0; 
+                margin: 0 0 5vh 0; 
                 padding: 0 1vh 0 1vh;
             }
             &-banner{
