--- a/src/assets/sass/components/_carousel.scss
+++ b/src/assets/sass/components/_carousel.scss
@@ -20,22 +20,29 @@
         width: 100%;
     }
     &__radio-list{
-        display: flex;
-        flex-direction: row;
+        align-self: center;
+        display: grid;
         justify-content: center;
+        grid-template-columns: repeat(auto-fit,.5rem);
         margin: 1.5rem 0 0 0;
-        gap: 0 .8rem;
+        gap: 1rem .8rem;
         overflow: auto;
-        
+        width: 90%;
+
+        & .--active-radio{
+            padding: 1px;
+        }
         & .--disabled-radio{
-            opacity: 0.3;
+            opacity: 0.5;
         }
     }
     &__radio-button{
         background-color: #73A8A0;
         border: none;
         border-radius: 50%;
-        padding: .35rem;
+        width: .5rem;
+        height: .5rem;
+        margin: auto 0 auto 0;
     }
     &__feedback{
         display: flex;
@@ -72,12 +79,14 @@
             margin: 0 2.5vh 0 2.5vh;
         }
         &__radio-list{
+            grid-template-columns: repeat(auto-fit, 1.3vh);
             margin: 5vh 0 0 0;
-            gap: 0 1vh;
+            gap: 1vh 1vh;
         }
         &__radio-button{
-            padding: .6vh .55vh;
-    
+            width: 1.3vh;
+            height: 1.3vh;
+
             &:hover{
                 cursor: pointer;
                 opacity: 0.8;
