--- a/src/assets/sass/layout/_mods.scss
+++ b/src/assets/sass/layout/_mods.scss
@@ -258,7 +258,6 @@
     margin: .5rem 0 0 0;
 }
 .--paused{
-    border: .1rem solid #c4c4c4;
     transition: border ease-in .1s;
 }
 .--playing{
@@ -266,7 +265,6 @@
     -moz-animation: pulse 2s infinite;
     -o-animation: pulse 2s infinite;
     animation: pulse 2s infinite;
-    border: .4rem solid #73A8A0;
     transition: all ease-in .1s;
 }
 .--fade-up{
@@ -291,60 +289,63 @@
     filter: blur(1rem);
     -webkit-filter: blur(1rem);
 }
+.--negative-top{
+    margin-top: -1.5rem;
+}
 @-webkit-keyframes pulse {
     0% {
-        -webkit-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
+        -webkit-box-shadow: 0 0 0 0 rgba(12,12,12, 0.7);
     }    
     70% {
-        -webkit-box-shadow: 0 0 0 1rem rgba(115, 168, 160, 0);
+        -webkit-box-shadow: 0 0 0 1rem rgba(12,12,12, 0);
     }    
     100% {
-        -webkit-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+        -webkit-box-shadow: 0 0 0 0 rgba(12,12,12, 0);
     }
 }
 @-moz-keyframes pulse {
     0% {
-        box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
+        box-shadow: 0 0 0 0 rgba(12,12,12, 0.7);
     }    
     70% {
-        box-shadow: 0 0 0 1rem rgba(115, 168, 160, 0);
+        box-shadow: 0 0 0 1rem rgba(12,12,12, 0);
     }    
     10% {
-        box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+        box-shadow: 0 0 0 0 rgba(12,12,12, 0);
 
     }
 }
 @-ms-keyframes pulse {
     0% {
-        -ms-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
+        -ms-box-shadow: 0 0 0 0 rgba(12,12,12, 0.7);
     }    
     70% {
-        -ms-box-shadow: 0 0 0 1rem rgba(115, 168, 160, 0);
+        -ms-box-shadow: 0 0 0 1rem rgba(12,12,12, 0);
     }    
     100% {
-        -ms-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+        -ms-box-shadow: 0 0 0 0 rgba(12,12,12, 0);
     }
 }
 @-o-keyframes pulse {
     0% {
-        box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
+        box-shadow: 0 0 0 0 rgba(12,12,12, 0.7);
     }    
     70% {
-        box-shadow: 0 0 0 1rem rgba(115, 168, 160, 0);
+        box-shadow: 0 0 0 1rem rgba(12,12,12, 0);
     }    
     100% {
-        box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+        box-shadow: 0 0 0 0 rgba(12,12,12, 0);
     }
 }
 @keyframes pulse {
     0% {
-        box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
+        box-shadow: 0 0 0 0 rgba(12,12,12, 0.7);
     }    
     70% {
-        box-shadow: 0 0 0 1rem rgba(115, 168, 160, 0);
+        box-shadow: 0 0 0 1rem rgba(12,12,12, 0);
     }    
     100% {
-        box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+        box-shadow: 0 0 0 0 rgba(12,12,12, 0);
     }
 }
 @-webkit-keyframes shake {
@@ -616,17 +617,6 @@
         font-size: 2vh;
         margin: 1vh 0 0 0;
     }
-    .--paused{
-        border: .3vh solid #c4c4c4;
-    }
-    .--playing{
-        border: 1vh solid #73A8A0;
-    }
-    .--fade-up{
-        &:hover{
-            background: linear-gradient(0deg, rgba(0,0,0,0.70) 60%, rgba(255,255,255,0) 100%);
-        }
-    }
     .--active-controller{
         &:hover{
             opacity: 0.8;
@@ -655,60 +645,63 @@
         filter: blur(2vh);
         -webkit-filter: blur(2vh);
     }
+    .--negative-top{
+        margin-top: -3vh;
+    }
     @-webkit-keyframes pulse {
         0% {
-            -webkit-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
+            -webkit-box-shadow: 0 0 0 0 rgba(12,12,12, 0.7);
         }    
         70% {
-            -webkit-box-shadow: 0 0 0 4vh rgba(115, 168, 160, 0);
+            -webkit-box-shadow: 0 0 0 4vh rgba(12,12,12, 0);
         }    
         100% {
-            -webkit-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+            -webkit-box-shadow: 0 0 0 0 rgba(12,12,12, 0);
         }
     }
     @-moz-keyframes pulse {
         0% {
-            box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
+            box-shadow: 0 0 0 0 rgba(12,12,12, 0.7);
         }    
         70% {
-            box-shadow: 0 0 0 4vh rgba(115, 168, 160, 0);
+            box-shadow: 0 0 0 4vh rgba(12,12,12, 0);
         }    
         100% {
-            box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+            box-shadow: 0 0 0 0 rgba(12,12,12, 0);
     
         }
     }
     @-ms-keyframes pulse {
         0% {
-            -ms-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
+            -ms-box-shadow: 0 0 0 0 rgba(12,12,12, 0.7);
         }    
         70% {
-            -ms-box-shadow: 0 0 0 3vh rgba(115, 168, 160, 0);
+            -ms-box-shadow: 0 0 0 3vh rgba(12,12,12, 0);
         }    
         100% {
-            -ms-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+            -ms-box-shadow: 0 0 0 0 rgba(12,12,12, 0);
         }
     }
     @-o-keyframes pulse {
         0% {
-            box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
+            box-shadow: 0 0 0 0 rgba(12,12,12, 0.7);
         }    
         70% {
-            box-shadow: 0 0 0 4vh rgba(115, 168, 160, 0);
+            box-shadow: 0 0 0 4vh rgba(12,12,12, 0);
         }    
         100% {
-            box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+            box-shadow: 0 0 0 0 rgba(12,12,12, 0);
         }
     }
     @keyframes pulse {
         0% {
-            box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
+            box-shadow: 0 0 0 0 rgba(12,12,12, 0.7);
         }    
         70% {
-            box-shadow: 0 0 0 4vh rgba(115, 168, 160, 0);
+            box-shadow: 0 0 0 4vh rgba(12,12,12, 0);
         }    
         100% {
-            box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+            box-shadow: 0 0 0 0 rgba(12,12,12, 0);
         }
     }
 
