--- a/src/assets/sass/components/_cards.scss
+++ b/src/assets/sass/components/_cards.scss
@@ -1,4 +1,15 @@
 .card__product{
+    border-bottom: .1rem solid grey;
+    padding: 0 0 .8rem 0;
+
+    &-info{
+        text-decoration: none;
+        display: flex;
+        flex-direction: column;
+        font-family: 'ProximaNova-Regular';
+        margin: .6rem;
+        gap: 1rem 0;
+    }
     &-banner{
         display: flex;
         flex-direction: column;
@@ -6,6 +17,7 @@
         background-repeat: no-repeat;
         background-size: 100% 15rem;
         height: 15rem;
+
         & .button__like{
            align-self: flex-end;
            margin: .5em .5rem 0 0;
@@ -14,14 +26,8 @@
     &-title{
         font-family: 'ProximaNova-SemiBold';
         font-size: .8rem;
-        margin: .5rem 0 .5rem 0;
-        height: 16px;
         overflow: hidden;
-    }
-    &-description{
-        font-family: 'ProximaNova-Regular';
-        font-size: .7rem;
-        margin: 0 0 1rem 0;
+        height: 10px;
     }
     &-price{
         font-family: 'ProximaNova-Thin';
@@ -99,20 +105,35 @@
 }
 @media (min-width: 801px){
     .card__product{
+        border-bottom: .1vh solid grey;
+        padding: 0 0 2vh 0;
+
+        &:hover{
+            border-color: #73A8A0;
+        }
+        &:hover &-banner{
+            -webkit-transition: transform ease-in-out .2s;
+            -moz-transition: transform ease-in-out .2s;
+            -ms-transition: transform ease-in-out .2s;
+            -o-transition: transform ease-in-out .2s;
+            transition: transform ease-in-out .2s;
+            transform: scale(1.04);
+        }
+        &-info{
+            margin: 1vh 0 0 0;
+            gap: 1.5vh 0;
+            font-size: 1.7vh;
+        }
         &-banner{
             background-size: 100% 40vh;
             height: 40vh;
+
             & .button__like{
                 margin: 1vh 1vh 0 0;
             }
         }
         &-title{
             font-size: 2vh;
-            margin: 2.5vh 0 1vh 0;
-        }
-        &-description{
-            font-size: 1.7vh;
-            margin: 0 0 3vh 0;
         }
         &-price{
             font-size: 2.2vh;
