--- a/src/assets/sass/components/_cards.scss
+++ b/src/assets/sass/components/_cards.scss
@@ -1,5 +1,4 @@
 .card__product{
-    border-bottom: .1rem solid grey;
     padding: 0 0 .8rem 0;
 
     &-info{
@@ -27,7 +26,7 @@
         font-family: 'ProximaNova-SemiBold';
         font-size: .8rem;
         overflow: hidden;
-        height: 10px;
+        height: .6rem;
     }
     &-price{
         font-family: 'ProximaNova-Thin';
@@ -105,11 +104,15 @@
 }
 @media (min-width: 801px){
     .card__product{
-        border-bottom: .1vh solid grey;
         padding: 0 0 2vh 0;
+        -webkit-transition: border-bottom ease-in-out .2s;
+        -moz-transition: border-bottom ease-in-out .2s;
+        -ms-transition: border-bottom ease-in-out .2s;
+        -o-transition: border-bottom ease-in-out .2s;
+        transition: border-bottom ease-in-out .2s;
 
         &:hover{
-            border-color: #73A8A0;
+            border-bottom: .1vh solid #73A8A0;
         }
         &:hover &-banner{
             -webkit-transition: transform ease-in-out .2s;
@@ -134,6 +137,7 @@
         }
         &-title{
             font-size: 2vh;
+            height: 1.6vh;
         }
         &-price{
             font-size: 2.2vh;
