--- a/src/assets/sass/views/_page.scss
+++ b/src/assets/sass/views/_page.scss
@@ -274,6 +274,10 @@
         height: 15rem;
         margin: -15rem 0 0 0;
     }
+    &__concept-image{
+        width: 100%;
+        height: 100%;
+    }
 }
 
 @media (min-width: 768px){
