--- a/src/assets/sass/components/_cart.scss
+++ b/src/assets/sass/components/_cart.scss
@@ -16,8 +16,8 @@
 @media (min-width: 801px){
     .cart{
         &__status{
-            width: 2vh;
-            height: 2vh;
+            width: 100%;
+            height: 2.5vh;
             font-size: 1vh;
             margin: -1.8vh 0 0 0;
         }
