Major Cart view design update

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -15,6 +15,7 @@
 @import 'components/loader';
 @import 'components/profile-posts';
 @import 'components/hamburguer-menu';
+@import 'components/table-listing';
 
 //Pages Import
 @import 'views/page';
